--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <p class="profile__description">Civil Aviator</p>
             <button type="button" class="profile__edit-btn">
               <img
-                src="./images/Group 2.svg"
+                src="./images/pencil.svg"
                 alt="Pencil icon"
                 class="profile__pencil-icon"
               />Edit Profile
