--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </main>
       <footer class="footer">2023 &copy; Spots</footer>
     </div>
-    <div class="modal">
+    <div class="modal" id="edit-profile-modal">
       <div class="modal__container">
         <button type="submit" class="modal__close-btn"></button>
         <h2 class="modal__title">Edit profile</h2>
