--- a/index.html
+++ b/index.html
@@ -59,7 +59,13 @@
     </div>
     <div class="modal" id="edit-profile-modal">
       <div class="modal__container">
-        <button type="submit" class="modal__close-btn"></button>
+        <button type="button" class="modal__close-btn">
+          <img
+            src="./images/close.svg"
+            alt="Close-icon"
+            class="modal__close-icon"
+          />
+        </button>
         <h2 class="modal__title">Edit profile</h2>
         <form name="edit-profile" class="modal__form">
           <label for="profile-name-input" class="modal__label">
