--- a/index.html
+++ b/index.html
@@ -128,20 +128,18 @@
       </div>
     </div>
 
-    <div class="modal" id="preview-modal">
+    <div class="modal modal_opened" id="preview-modal">
       <div class="modal__container modal__container_type_preview">
         <button
           type="button"
           class="modal__close-btn modal__close-btn_type_preview"
-        >
-          <img
-            src="./images/close-light.svg"
-            alt="Close-icon"
-            class="modal__close-icon modal__close-icon_type_preview"
-          />
-        </button>
-        <img class="modal__image" src="" alt="" />
-        <p class="modal__caption"></p>
+        ></button>
+        <img
+          class="modal__image"
+          src=" https://practicum-content.s3.us-west-1.amazonaws.com/software-engineer/spots/7-photo-by-griffin-wooldridge-from-pexels.jpg"
+          alt=""
+        />
+        <p class="modal__caption">Golden Gate Bridge</p>
       </div>
     </div>
     <script defer src="./scripts/index.js"></script>
