--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           />
         </button>
         <h2 class="modal__title">Edit profile</h2>
-        <form name="edit-profile" class="modal__form">
+        <form name="edit-profile" class="modal__form" novalidate>
           <label for="profile-name-input" class="modal__label">
             Name
             <input
@@ -76,7 +76,11 @@
               type="text"
               class="modal__input"
               placeholder="Type your name"
+              minlength="2"
+              maxlength="40"
+              required
             />
+            <span id="profile-name-input-error" class="modal__error"></span>
           </label>
           <label for="profile-description-input" class="modal__label">
             Description
@@ -85,7 +89,14 @@
               type="text"
               class="modal__input"
               placeholder="Describe yourself"
+              minlength="2"
+              maxlength="200"
+              required
             />
+            <span
+              id="profile-description-input-error"
+              class="modal__error"
+            ></span>
           </label>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
@@ -102,7 +113,7 @@
           />
         </button>
         <h2 class="modal__title">New Post</h2>
-        <form id="add-card-form" class="modal__form">
+        <form id="add-card-form" class="modal__form" novalidate>
           <label for="add-card-link-input" class="modal__label">
             Image Link
             <input
@@ -111,7 +122,9 @@
               class="modal__input"
               name="link"
               placeholder="Paste a link to the picture"
+              required
             />
+            <span id="add-card-link-input-error" class="modal__error"></span>
           </label>
           <label for="add-card-name-input" class="modal__label">
             Caption
@@ -121,8 +134,12 @@
               class="modal__input"
               name="name"
               placeholder="Type your caption"
+              minlength="2"
+              maxlength="30"
+              required
             />
           </label>
+          <span id="add-card-name-input-error" class="modal__error"></span>
           <button type="submit" class="modal__submit-btn">Save</button>
         </form>
       </div>
@@ -138,6 +155,7 @@
         <p class="modal__caption"></p>
       </div>
     </div>
+    <script defer src="./scripts/validation.js"></script>
     <script defer src="./scripts/index.js"></script>
   </body>
 </html>
